# Hackday_Clz

./: db.sqlite3  manage.py  pyproject.toml
stdinfosys/: asgi.py  settings.py  urls.py  wsgi.py
templates/: assignment.html  attendance.html  demo.html  discussion.html  events.html  homework.html  index.html  t_assignment.html  t_homework.html  t_index.html
webapp/: admin.py  backend.py  forms.py  urls.py  utils.py  validators.py  views.py
webapp/migrations/: 0001_initial.py  0002_remove_customuser_is_student_alter_semester_cr.py  0003_semester_department.py  0004_event_alter_assignment_options_alter_college_options_and_more.py  0005_assignment_upload.py  0006_rename_head_department_hod.py  0007_remove_event_created_at_event_added_at_and_more.py  0008_eventmanager.py  0009_submittedby_rename_member_club_members_and_more.py  0010_rename_user_submittedby_student_and_more.py  0011_alter_submittedby_student.py  0012_alter_assignment_due_date.py  0013_eventqueryset_rename_happenning_event_happening.py  0014_alter_assignment_teacher_alter_assignment_topic_and_more.py  0015_alter_event_image.py  0016_college_logo.py  0017_submittedby_status.py  0018_discussion.py  0019_rename_student_discussion_user.py  0020_discussion_semester.py  0021_alter_discussion_options_alter_customuser_semester.py  0022_assignment_description.py  0023_submission_remove_assignment_submitted_by_and_more.py  0024_assignment_image_alter_submission_assignment.py
webapp/models/: __init__.py  college.py  essentials.py  main.py
webapp/templates/webapp/: _base.html  (+9 more)
webapp/templatetags/: extras.py
