[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["Shub Raj Lama <shuvraj1234@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
Pillow = "^9.2.0"
python-dotenv = "^0.20.0"
channels = "^3.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
